--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./../Style/index.css">
+    <link rel="stylesheet" href="Style/index.cs">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
     <title>Kritika Tripathi</title>
@@ -14,7 +14,7 @@
         <div>
             <div class="row float"  >
                 <div id = "profile_pic" class="float col-12 col-12 col-md-12 col-lg-4" > 
-                    <img src="./../Photos/profile_pic.jpg.jpg" alt="Profile Photo">
+                    <img src="Photos/profile_pic.jpg.jpg" alt="Profile Photo">
                 </div>
                 <div id ="profile_name" class="float col-12 col-12 col-md-12 col-lg-8">
                     <div>
@@ -52,11 +52,11 @@
             </div>
             <div>
                 <div id="tech_stack_info">
-                    <img src="./../Photos/html5.jpg" alt="Image of HTML 5">
-                    <img src="./../Photos/javascript.jpg" alt="Image of Java Script">
-                    <img src="./../Photos/bootstrap.jpg" alt="Image of Bootstrap">
-                    <img src="./../Photos/github.jpg" alt="Image of Git Hub">
-                    <img src="./../Photos/CSS3.jpg" alt="Image of CSS 3">
+                    <img src="Photos/html5.jpg" alt="Image of HTML 5">
+                    <img src="Photos/javascript.jpg" alt="Image of Java Script">
+                    <img src="Photos/bootstrap.jpg" alt="Image of Bootstrap">
+                    <img src="Photos/github.jpg" alt="Image of Git Hub">
+                    <img src="Photos/CSS3.jpg" alt="Image of CSS 3">
                 </div>
             </div>
         </div>
@@ -69,14 +69,14 @@
                 </div>
                 <div id="proficiency_img">
                     <div class="float text-center">
-                        <img src="./../Photos/frontEnd.jpg" alt="Front End" > 
+                        <img src="Photos/frontEnd.jpg" alt="Front End" > 
                         <p>
                             Front End
                             <span>Java Script</span>
                         </p>
                     </div>
                    <div class="text-center">
-                    <img src="./../Photos/dataStructure.jpg" alt="Data Structure">
+                    <img src="Photos/dataStructure.jpg" alt="Data Structure">
                     <p>Data Structure 
                         <span>Arrays, Stacks, Queues,  and Algorithm</span>
                     </p>
@@ -172,7 +172,7 @@
             <div class="row">
                 <div class="col-12 offset-sm-1 offset-md-2 offset-lg-2">  
                     <div class="card m-3">
-                        <img src="./../Photos/githubCommit.jpg" class="card-img-top" alt="...">
+                        <img src="Photos/githubCommit.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <p class="card-text text-center h3">268 contribution in last year</p>
                         </div>
