Second Phase of Changes

--- a/index.html
+++ b/index.html
@@ -11,133 +11,78 @@
 <body>
     <div class="container-fluid">
         <!-- Name and Tech Stack-->
-        <div >
-            <div>
-                <div class="row">
-                    <div class="col-12 col-sm-12 col-md-6 col-lg-3 text-center">
-                        <div >
-                            <div>
-                                <img src="Photos/profile_pic.jpg" class ="rounded-circle img-fluid border border-dark p-2 m-3" alt="Pic">
-                                <!-- <i class="fas fa-circle h2 float-right"></i> -->
-                            </div>
-                            <div>
-                                <div><p class="h1 font-weight-normal"> Kritika Tripathi</p></div>
-                                <div><p class="h4">Full Stack Developer</p></div>
-                            </div>
-                        </div>
+        <div class="divOfProfile flex-sm-row" style="border:1px solid black">
+            <div class="profile">
+                <img src="Photos/profile_pic.jpg" class ="rounded-circle img-fluid border border-dark p-2 my-3 mt-3" alt="Pic">
+                <div style="border:1px solid blue;" class="bioDiv ">
+                    <div class="nameData">
+                        <h3 class="text-center">Kritika Tripathi</h3>
+                        <h6 class="text-center">Full Stack Developer</h6>
                     </div>
-                    <div class="col-12 col-sm-12 col-md-6 col-lg-9">
-                        <div class="ml-3 m-5">
-                            <p class="text-justify">A passionate aspiring Full Stack Developer skilled in MERN stack,
+                    <div class="contactData">
+                        <i class="fas fa-map-marker-alt contacts"></i>Bangalore
+                        <i class="fas fa-phone-alt contacts"></i>9449767002                        <a class="text-dark contacts" href = "mailto: kritikaktripathi@gmail.com">
+                            <i class="fas fa-envelope"></i>&nbsp;
+                            kritikaktripathi@gmail.com
+                        </a>  
+                        <br>
+                        <hr>
+                        <a href="https://www.linkedin.com/in/kritika-tripathi-a579b1aa/" target="_blank" class="contacts"><i class="fab fa-linkedin link_info text-dark"></i></a>
+                        <a href="https://github.com/Tripathikritika" target="_blank" class="contacts"><i class="fab fa-github link_info text-dark"></i></a>
+                        <a href="https://twitter.com/home" target="_blank" class="contacts"><i class="fab fa-twitter link_info text-dark"></i></a>
+                        <a href="https://www.hackerrank.com/dashboard" target="_blank" class="contacts"><i class="fab fa-hackerrank link_info text-dark"></i></a>
+                    </div>
+                    <hr>
+                    <div class="descriptionData">
+                        <div class="descData">
+                            A passionate aspiring Full Stack Developer skilled in MERN stack,
                                 moulded and  shaped by Masai School's numerous
                                 training. Actively ready to join  in  a great lively team of a good 
                                 start-up to adapt me in any situation  and
                                 environment with ease and perform the best.
-                            </p>
-                        </div>
-                        <hr class="horizontalLine">
-                        <div>
-                            <div class="row">
-                                <div class="col-12 col-sm-12 col-md-12 col-lg-3  offset-md-1 offset-lg-0"> 
-                                        <i class="fas fa-map-marker-alt ml-3 h4"></i>&nbsp;Bangalore
-                                </div>
-                                <div class="col-12 col-sm-12 col-md-12 col-lg-3  offset-md-1 offset-lg-0"> 
-                                    <i class="fas fa-phone-alt ml-3 h4"></i>&nbsp;9449767002
-                                </div>
-                                <div class="col-12 col-sm-12 col-md-12 col-lg-5  offset-md-1 offset-lg-0"> 
-                                    <i class="fas fa-envelope ml-3 h4"></i>&nbsp;
-                                    <a class="text-dark" href = "mailto: kritikaktripathi@gmail.com">kritikaktripathi@gmail.com</a>                                   
-                                </div> 
-                            </div>
-                        </div>  
-                        <hr class="horizontalLine">
-                        <div>
-                            <div class="row">
-                                <div class="col-2 col-sm-2 col-md-3 col-lg-3"> 
-                                    <a href="https://www.linkedin.com/in/kritika-tripathi-a579b1aa/" class="h2"><i class="fab fa-linkedin link_info ml-3 text-dark"></i></a>
-                                </div>
-                                <div class="col-2 col-sm-2 col-md-3 col-lg-3"> 
-                                    <a href="https://github.com/Tripathikritika" class="h2"><i class="fab fa-github link_info ml-3 text-dark"></i></a>
-                                </div>
-                                <div class="col-2 col-sm-2 col-md-3 col-lg-3"> 
-                                    <a href="https://twitter.com/home" class="h2"><i class="fab fa-twitter link_info ml-3 text-dark"></i></a>
-                                </div> 
-                                <div class="col-2 col-sm-2 col-md-3 col-lg-3"> 
-                                    <a href="https://www.hackerrank.com/dashboard" class="h2"><i class="fab fa-hackerrank link_info ml-3 text-dark"></i></a>
-                                </div> 
-                            </div>
-                        </div>  
-                        <hr class="horizontalLine">
-                        <div class="text-center">
-                            <div class="row ">
-                                <div class="col-12">
-                                    <button type="button" class="btn btn-outline-dark">
-                                        My Resume <i class="fas fa-download"></i></button>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-            <br><br>
-
-            <!-- Part 3 -->
-            <div>
-                <div class="row">
-                    <div class="col-2">
-                        <div class="">
-                        <img src="https://cdn.svgporn.com/logos/html-5.svg" alt="Html" class="img-fluid">
-                        </div>
-                        <div>
-                            <h6 class="text-center">HTML</h6>
                         </div>
                     </div>
-                    <div class="col-2">
-                        <div class="">
-                        <img src="https://cdn.svgporn.com/logos/git-icon.svg" alt="Git" class=" img-fluid">
-                        </div>
-                        <div>
-                            <h6 class="text-center">GIT</h6>
-                        </div>
-                    </div>
-                    <div class="col-2">
-                        <div class="">
-                        <img src="https://cdn.svgporn.com/logos/javascript.svg" alt="JS" class=" img-fluid">
-                        </div>
-                        <div>
-                            <h6 class="text-center">JS</h6>
-                        </div>
-                    </div>
-                    <div class="col-2">
-                        <div class="">
-                        <img src="https://cdn.svgporn.com/logos/bootstrap.svg" alt="Bootstrap" class=" img-fluid">
-                        </div>
-                        <div>
-                            <h6 class="text-center">BOOTSTRAP</h6>
-                        </div>
-                    </div>
-                    <div class="col-2">
-                        <div class="">
-                        <img src="https://cdn.svgporn.com/logos/react.svg" alt="React" class=" img-fluid">
-                        </div>
-                        <div>
-                            <h6 class="text-center">REACT</h6>
-                        </div>
-                    </div>
-                    <div class="col-2">
-                        <div class="">
-                        <img src="https://cdn.svgporn.com/logos/css-3.svg" alt="CSS" class=" img-fluid">
-                        </div>
-                        <div>
-                            <h6 class="text-center">CSS</h6>
-                        </div>
+                    <div>
+                        <button type="button" class="btn btn-outline-dark">
+                            My Resume <i class="fas fa-download"></i></button>
                     </div>
                 </div>
             </div>
         </div>
-        <br><br>
-        <hr >
+        <br><br><hr>
+        <div>
+            <!-- Part 3 -->
+            <div  style="border: 1px solid black;" class="technologies">
+                <div>
+                    <img src="./Photos/html.jpg" alt="Html" class="img-fluid icon" >
+                    <h5 class="techTags">HTML</h5>
+                </div>
+                <div>
+                    <img src="https://cdn.svgporn.com/logos/git-icon.svg" alt="Git" class="icon img-fluid"> 
+                    <h5 class="techTags">GIT</h5>
+                </div>
+                <div>
+                    <img src="https://cdn.svgporn.com/logos/javascript.svg" alt="JS" class="icon img-fluid">
+                    <h5 class="techTags">JAVASCRIPT</h5>
+                </div>
+                <div>
+                    <img src="https://cdn.svgporn.com/logos/bootstrap.svg" alt="Bootstrap" class="icon img-fluid">
+                    <h5 class="techTags">BOOTSTRAP</h5>
+                </div>
+                <div>
+                    <img src="https://cdn.svgporn.com/logos/react.svg" alt="React"class="icon img-fluid">
+                    <h5 class="techTags">REACT</h5>
+                </div>
+                <div>
+                    <img src="./Photos/css.jpg" alt="CSS" class="icon img-fluid" > 
+                    <h5 class="techTags">CSS</h5>
+                </div>
+                <div>
+                    <img src="https://cdn.svgporn.com/logos/redux.svg" alt="CSS" class="icon img-fluid" width="235px">
+                    <h5 class="techTags">REDUX</h5>
+                </div>
+            </div>
+            <hr>
           <!-- Proficiency -->
         <div >
             <div>
@@ -324,72 +269,57 @@
         </div>
         <br> <br>
         <hr>
-        <div class="completedDiv pt-2" >
-            <div class="row text-center d-flex justify-content-around">
-                <div class="col-12 col-sm-12 col-md-6 col-lg-2 " >
-                    <div class="circleDiv d-flex flex-column justify-content-center align-items-center ">
-                        <div class="text-center m-3 h1 font-weight-normal" >
-                            1200+
+        <!-- Circles -->
+        <div class="stats">
+            <h1>STATS</h1>
+            <div class="circleOfHours" style="border:1px solid black">
+                <div class="m-4">
+                    <div class="circleDiv justify-content-center align-items-center" >
+                        <div class="text-center m-3 font-weight-normal" >
+                            1200+ Hours of
                         </div>
                     </div>
-                    <div class="h4">
-                        Hours of coding
-                    </div>
+                    <h5>Full stack coding</h5>
                 </div>
-                <div class="col-12 col-sm-12 col-md-6 col-lg-2 ">
-                    <div class="circleDiv d-flex flex-column justify-content-center align-items-center " >
-                        <div class="text-center m-3  h1 font-weight-normal">
-                            140+
+
+                <div class="m-4">
+                    <div class="circleDiv justify-content-center align-items-center ">
+                        <div class="text-center m-3 font-weight-normal" >
+                            140+ 
                         </div>
                     </div>
-                    <div class="h4">
-                        Data Structure
-                    </div>
+                    <h5 class="text-center">Data Structure </h5>
                 </div>
-                <div class="col-12 col-sm-12 col-md-6 col-lg-2 ">
-                    <div class="circleDiv d-flex flex-column justify-content-center align-items-center">
-                        <div class="text-center m-3  h1 font-weight-normal">
+                
+                <div class="m-4">
+                    <div class="circleDiv  justify-content-center align-items-center ">
+                        <div class="text-center m-3 font-weight-normal" >
                             260+
                         </div>
                     </div>
-                    <div class="h4">
-                        Git Commit
-                    </div>
+                    <h5 class="text-center">Git Commit</h5>
                 </div>
-                <div class="col-12 col-sm-12 col-md-6 col-lg-2 ">
-                    <div class="circleDiv d-flex flex-column justify-content-center align-items-center">
-                        <div class="text-center m-3  h1 font-weight-normal">
+                <div class="m-4">
+                    <div class="circleDiv  justify-content-center align-items-center ">
+                        <div class="text-center m-3 font-weight-normal" >
                             6+
                         </div>
                     </div>
-                    <div class="h4">
-                        Projects
-                    </div>
+                    <h5 class="text-center">Projects</h5>
                 </div>
-                <div class="col-12 col-sm-12 col-md-6 col-lg-2 ">
-                    <div class="circleDiv d-flex flex-column justify-content-center align-items-center">
-                        <div class="text-center m-3  h1 font-weight-normal">
+                <div class="m-4">
+                    <div class="circleDiv  justify-content-center align-items-center ">
+                        <div class="text-center m-3 font-weight-normal" >
                             100+
                         </div>
                     </div>
-                    <div class="h4">
-                        Soft Skills
-                    </div>
+                    <h5 class="text-center">Soft Skills</h5>
                 </div>
             </div>
-
+        </div>        
+        <div class="circleOfHours" style="border:1px solid black">
+            <img src="Photos/githubCommit.jpg" class="img-fluid" alt="Git hub stats">
         </div>
-        
-        <hr>
-        <!-- GIT HUB STATS -->
-        <div class="row">
-            <div class="col-8 offset-lg-2">
-                <div class="text-center font-italic"><h1>GIT HUB STATS</h1></div>
-                <img src="Photos/githubCommit.jpg" class="card-img-top img-fluid" alt="Git hub stats">
-            </div>
-
-        </div>
-
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
