Resume Link Updated

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container-fluid" >
         <!-- Name and Tech Stack-->
         <div class="divOfProfile flex-sm-row">
-            <div class="profile ">
+            <div class="profile">
                 <img src="Photos/profile_pic.jpg" class ="rounded-circle img-fluid border border-dark p-2 my-3 mt-3" alt="Pic">
                 <div class="bioDiv ">
                     <div class="nameData">
@@ -45,7 +45,7 @@
                         </div>
                     </div>
                     <div>
-                        <a type="button" class="btn btn-outline-dark" href="https://drive.google.com/drive/folders/1SnaQOD31pqbbWKaJFrH-4hq48W5OuWfG?usp=sharing">
+                        <a type="button" class="btn btn-outline-dark" href="./Photos/KritikaTripathi.pdf" target = "_blank">
                             My Resume <i class="fas fa-download"></i> </a>
                     </div>
                 </div>
@@ -203,7 +203,7 @@
                                                             </div>
                                                             <div class="col-12 mt-2 text-center d-flex justify-content-around">
                                                                 <a class="btn btn-outline-info" href="https://github.com/Tripathikritika/Refresh-Menu" target="_blank" ><i class="fab fa-github"></i>Git Hub</i></a>
-                                                                <a class="btn btn-outline-info" href="#" target="_blank" data-tooltip="View Online" ><i class="fas fa-external-link-alt"></i>Live Demo</i></a>
+                                                                <a class="btn btn-outline-info" href="https://drive.google.com/file/d/1gJ8Y580GXv_WDR6RqDqKh7tv8KBotjq6/view?usp=sharing" target="_blank" data-tooltip="View Online" ><i class="fas fa-external-link-alt"></i>Live Demo</i></a>
                                                             </div>
                                                             <div class="col-12 mt-3 text-center">
                                                                 <div style=" width:100%" class="d-flex m-0 justify-content-around">
