--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                 Front End
                             </div>
                             <div class="h6 profColor">
-                                <p>Builds the visible parts of websites that You see and interact with</p>
+                                <p>Builds the visible parts of websites that you see and interact with</p>
                             </div>
                         </div>
                         <div class="col-12 col-12 col-md-3 col-lg-3 profiDiv" >
@@ -141,7 +141,7 @@
                                 Data Structure
                             </div>
                              <div class="h6 profColor">
-                                <p>Putting the right blocks in the right place is my thing</p>
+                                <p>Efficient and optimized program is my thing</p>
                             </div>
                         </div>
                         <div class="col-12 col-12 col-md-3 col-lg-3 profiDiv">
