Mobile number updated

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     </div>
                     <div class="contactData mb-0">
                         <a ><i class="fas fa-map-marker-alt contacts text-warning"></i>Bangalore</a>
-                        <a ><i class="fas fa-phone-alt contacts text-success"></i>7738650766   </a>                     
+                        <a ><i class="fas fa-phone-alt contacts text-success"></i>9449767002   </a>                     
                         <a class="text-dark contactMail" href = "mailto: kritikaktripathi@gmail.com">
                             <i class="fas fa-envelope text-danger"></i>
                             kritikaktripathi@gmail.com</a>  
@@ -43,7 +43,7 @@
                         </div>
                     </div>
                     <div class="mt-1">
-                        <a type="button" class="btn btn-outline-dark shadow-none" href="./Photos/Kritika-Resume.pdf" target = "_blank">
+                        <a type="button" class="btn btn-outline-dark shadow-none" href="./Photos/KritikaTripathi.pdf" target = "_blank">
                             My Resume <i class="fas fa-download"></i> </a>
                     </div>
                 </div>
