Index file for medium blog

--- a/index.html
+++ b/index.html
@@ -22,18 +22,20 @@
                         <h2 class="text-center font-weight-bold profColor">Kritika Tripathi .</h2>
                         <h5 class="text-center ">Full Stack Developer</h5>
                     </div>
-                    <div class="contactData mb-0">
+                    <div class="contactData mb-0" >
                         <a ><i class="fas fa-map-marker-alt contacts text-warning"></i>Bangalore</a>
                         <a ><i class="fas fa-phone-alt contacts text-success"></i>9449767002   </a>                     
                         <a class="text-dark contactMail" href = "mailto: kritikaktripathi@gmail.com">
                             <i class="fas fa-envelope text-danger"></i>
                             kritikaktripathi@gmail.com</a>  
                         <hr>
+                    </div>
+                    <div class="variousIcons">
                         <a href="https://www.linkedin.com/in/kritika-tripathi-a579b1aa/" target="_blank" class="contacts"><i class="fab fa-linkedin h3 link_info text-primary"></i></a>
                         <a href="https://github.com/Tripathikritika" target="_blank" class="contacts"><i class="fab fa-github link_info text-dark h3"></i></a>
                         <a href="https://twitter.com/home" target="_blank" class="contacts"><i class="fab fa-twitter link_info text-info h3 "></i></a>
                         <a href="https://www.hackerrank.com/dashboard" target="_blank" class="contacts"><i class="fab fa-hackerrank link_info text-success h3"></i></a>
-                        <a href="https://medium.com/@kritikaktripathi" target="_blank" class="contacts"><i class="fab fa-blogger text-secondary h3"></i></a>                       
+                        <a href="https://kritikaktripathi.medium.com/" target="_blank" class="contacts"><img src="./Photos/medium.png" width="26.5px" height="" alt="medium"></a>                  
                     </div>
                     <hr>
                     <div class="descriptionData mt-0 mb-2">
