Track virus Project added

--- a/index.html
+++ b/index.html
@@ -286,12 +286,9 @@
                                     <div class="card">
                                         <input type="checkbox" id="card3" class="more">
                                         <div class="content">
-                                            <div class="front" style="background-image: url('./Photos/hackathon.jpg')">
+                                            <div class="front" style="background-image: url('./Photos/Covid-19.png')">
                                                 <div class="inner">
-                                                    <h3 class="text-center">The Decipher- <small class="h6">Hackathon</small></h3>
-                                                    <div class="rating">
-                                                        
-                                                    </div>
+                                                    <h3 class="text-center">Track Virus</h3>
                                                     <label for="card3" class="button" aria-hidden="true">
                                                         Details
                                                     </label>
@@ -303,20 +300,19 @@
                                                         <div class="row">
                                                             <div class="col-12 my-3 text-center">
                                                                 <div class="description">
-                                                                    <p class="text-center"> This App generates quotation documents of various events using RevvSales API & mail's the quotation to the inbox.
-                                                                        This was a collaborative Hackathon Project made in 48 hours Using RevvSales API.</p>
+                                                                    <p class="text-center"> Track virus calculates the total coronavirus, recovered, death cases worldwide. Integrated Map and React chartjs functionality.</p>
                                                                 </div>
                                                             </div>
                                                             <div class="col-12 mt-1 text-center d-flex justify-content-around">
-                                                                <a class="btn projectColors" href="https://github.com/masaianshubham/Hackathon/tree/master" target="_blank" ><i class="fab fa-github mr-1"></i><b>Git Hub</b></i></a>
-                                                                <a class="btn projectColors" href="https://masaianshubham.github.io/Hackathon/html/home.html" target="_blank" data-tooltip="View Online" ><i class="fas fa-external-link-alt mr-1"></i><b>Live Demo</b></i></a>
+                                                                <a class="btn projectColors" href="https://github.com/Tripathikritika/Covid-19" target="_blank" ><i class="fab fa-github mr-1"></i><b>Git Hub</b></i></a>
+                                                                <a class="btn projectColors" href="https://trackvirus.vercel.app" target="_blank" data-tooltip="View Online" ><i class="fas fa-external-link-alt mr-1"></i><b>Live Demo</b></i></a>
                                                             </div>
                                                             <div class="col-12 mt-1 text-center">
                                                                 <div style=" width:100%" class="d-flex m-0 justify-content-around">
                                                                     <h3><i class="fab fa-html5 text-danger p-2 rounded-pill"></i></h3>
                                                                     <h3><i class="fab fa-css3-alt p-2 rounded-pill text-primary"></i></h3>
                                                                     <h3><i class="fab fa-js p-2 rounded-pill text-warning"></i></h3>
-                                                                    <h3><i class="fab fa-bootstrap p-2 rounded-pill text-primary"></i></h3>
+                                                                    <h3><i class="fab fa-react  p-2 rounded-pill text-info"></i></h3>
                                                                 </div>
                                                             </div>
                                                             <div class="col-12 mt-0 mb-0 text-right ">
