Git stats updated

--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
                             </div>
                             <div class="m-4">
                                 <div class="circleDiv d-flex align-items-center justify-content-center">
-                                    <h5 class="d-flex align-items-center flex-column">600 <small class="h6 text-muted mt-2">Git Commit</small></h5>
+                                    <h5 class="d-flex align-items-center flex-column">850+ <small class="h6 text-muted mt-2">Git Commit</small></h5>
                                 </div>
                             </div>
                             <div class="m-4">
